--- a/src/Test/Umbraco772/Views/Single2.cshtml
+++ b/src/Test/Umbraco772/Views/Single2.cshtml
@@ -92,6 +92,7 @@
 
                 @Html.Terratype(new Options
 {
+	DomMonitorType = Options.DomMonitorTypes.Disable
     Provider = new Terratype.Providers.GoogleMapsV3()
     {
         Variety = new Terratype.Providers.GoogleMapsV3.VarietyDefinition()
