--- a/src/Test/Umbraco772/Views/google.cshtml
+++ b/src/Test/Umbraco772/Views/google.cshtml
@@ -12,7 +12,6 @@
                 crossorigin="anonymous"></script>
         jquery = true;
     }
-    var a = new Terratype.Test.Umbraco772.App_Start.TestProvider();
 }
 
 <html>
@@ -20,64 +19,70 @@
     <title>Strongly Typed</title>
 </head>
 <body>
-    Jquery is @jquery
+	Jquery is @jquery
+
+	@{
+		var options = new Options { MapSetId = 1 };
+	}
+
+	@Html.Terratype((Terratype.Models.Model) Model.Content.GetProperty("map").Value)
 
 
-    <fieldset>
-        <legend>
-            Map 1
-        </legend>
-        <dl>
+	<fieldset>
+		<legend>
+			Map 1
+		</legend>
+		<dl>
 			<dt>
 				Height
 			</dt>
 			<dd>
 				@(Model.Content.Map.Height)px
 			</dd>
-            <dt>
-                Zoom
-            </dt>
-            <dd>
-                @Model.Content.Map.Zoom
-            </dd>
-            <dt>
-                Lookup
-            </dt>
-            <dd>
-                @Model.Content.Map.Lookup
-            </dd>
-            <dt>
-                Position
-            </dt>
-            <dd>
-                @Model.Content.Map.Position
-            </dd>
-            <dt>
-                Coordinate System
-            </dt>
-            <dd>
-                @Model.Content.Map.Position.Id
-            </dd>
-            <dt>
-                Provider
-            </dt>
-            <dd>
-                @Model.Content.Map.Provider.Id
-            </dd>
-            <dt>
-                Icon Url
-            </dt>
-            <dd>
-                @Model.Content.Map.Icon.Url
-            </dd>
-            <dt>
-                Api Key
-            </dt>
-            <dd>
-                @((Model.Content.Map.Provider as Terratype.Providers.GoogleMapsV3).ApiKey)
-            </dd>
+			<dt>
+				Zoom
+			</dt>
+			<dd>
+				@Model.Content.Map.Zoom
+			</dd>
+			<dt>
+				Lookup
+			</dt>
+			<dd>
+				@Model.Content.Map.Lookup
+			</dd>
+			<dt>
+				Position
+			</dt>
+			<dd>
+				@Model.Content.Map.Position
+			</dd>
+			<dt>
+				Coordinate System
+			</dt>
+			<dd>
+				@Model.Content.Map.Position.Id
+			</dd>
+			<dt>
+				Provider
+			</dt>
+			<dd>
+				@Model.Content.Map.Provider.Id
+			</dd>
+			<dt>
+				Icon Url
+			</dt>
+			<dd>
+				@Model.Content.Map.Icon.Url
+			</dd>
+			<dt>
+				Api Key
+			</dt>
+			<dd>
+				@((Model.Content.Map.Provider as Terratype.Providers.GoogleMapsV3).ApiKey)
+			</dd>
 
-        </dl>
+		</dl>
 		<div id="pretend-accordion" style="display:@(Request.QueryString["show"] != null ? "display" : "none");">
 
 			@Html.Terratype(new Options
@@ -95,9 +100,9 @@
 				Position = new Terratype.CoordinateSystems.Wgs84("-30,130")
 			})
 
-			@Html.Terratype(new Options { MapSetId = 2}, Model.Content.Map)
+			@Html.Terratype(new Options { MapSetId = 2 }, Model.Content.Map)
 		</div>
-        <button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
-    </fieldset>
+		<button onclick="var a = document.getElementById('pretend-accordion');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+	</fieldset>
 </body>
 </html>
