--- a/src/Test/Umbraco772/App_Plugins/Terratype.GoogleMapsV3/Views/config.definition.html
+++ b/src/Test/Umbraco772/App_Plugins/Terratype.GoogleMapsV3/Views/config.definition.html
@@ -10,6 +10,7 @@
 			<select id="terratype_{{identifier}}_googlemapv3_version" ng-model="config().provider.version" class="umb-editor" ng-change="vm().provider.events.versionChange()">
 				<option value="3" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version3"></option>
 				<option value="3.exp" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version3exp"></option>
+				<option value="3.34" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version334"></option>
 				<option value="3.33" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version333"></option>
 				<option value="3.32" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version332"></option>
 				<option value="3.31" terratype-translate="@terratypeGoogleMapsV3ConfigDefinition_version331"></option>
