--- a/src/Test/Umbraco772/Views/Single2.cshtml
+++ b/src/Test/Umbraco772/Views/Single2.cshtml
@@ -11,28 +11,6 @@
                 crossorigin="anonymous"></script>
 		jquery = true;
 	}
-	var userEmail = "admin@terratype.org"; //uri.Substring(18);
-
-	var wrapper = new HttpContextWrapper(HttpContext.Current);
-	var webSecurity = new Umbraco.Web.Security.WebSecurity(wrapper, global::Umbraco.Core.ApplicationContext.Current);
-	var userService = global::Umbraco.Core.ApplicationContext.Current.Services.UserService;
-	var userProvider = global::Umbraco.Core.Security.MembershipProviderExtensions.GetUsersMembershipProvider();
-
-
-	var userName = userProvider.GetUserNameByEmail(userEmail);
-
-	var user = userProvider.GetUser(userName, false);
-	webSecurity.PerformLogin((int)user.ProviderUserKey);
-	//HttpContext.Current.Response.Redirect("/umbraco/");
-
-	userProvider.ChangePassword(userName, "password", "password");
-
-	if (userProvider.ValidateUser(userName, "password"))
-	{
-		user = userProvider.GetUser(userName, false);
-		webSecurity.PerformLogin((int)user.ProviderUserKey);
-		HttpContext.Current.Response.Redirect("/umbraco/");
-	}
 }
 
 <html>
@@ -81,32 +59,28 @@
 
 
 
-                @Html.Terratype("map")
+    @Html.Terratype("map")
 
-                <br />
+    <br />
 
-                @Html.Terratype("map", @<text>This is the label</text>)
+    @Html.Terratype("map", @<text>This is the label</text>)
 
-                <br />
-
-
-                @Html.Terratype(new Options
-{
-	DomMonitorType = Options.DomMonitorTypes.Disable
-    Provider = new Terratype.Providers.GoogleMapsV3()
-    {
-        Variety = new Terratype.Providers.GoogleMapsV3.VarietyDefinition()
-        {
-            Satellite = false
-        }
-    },
-    Zoom = 3,
-    Position = new Terratype.CoordinateSystems.Wgs84("50,0")
-}, "map")
+    <br />
 
 
-
-
+    @Html.Terratype(new Options
+	{
+		DomMonitorType = Options.DomMonitorTypes.Disable,
+		Provider = new Terratype.Providers.GoogleMapsV3()
+		{
+			Variety = new Terratype.Providers.GoogleMapsV3.VarietyDefinition()
+			{
+				Satellite = false
+			}
+		},
+		Zoom = 3,
+		Position = new Terratype.CoordinateSystems.Wgs84("50,0")
+	}, "map")
 
 
 </body>
